# cosmic-ant-sim

./: Cargo.toml  README.md  shell.nix
assets/models/: shuttlebug2.glb
assets/shaders/: f_simple.glsl  v_constant.glsl  v_lambert.glsl  v_lamberttextured.glsl  v_simple.glsl
src/: main.rs
src/app/: app_window.rs  mod.rs  renderer.rs
src/models/: cube.rs  mod.rs  model.rs  shuttlebug.rs  sphere.rs
src/shader/: shaderprogram.rs
src/shaders/: mod.rs  shaderprogram.rs
src/utils/: constants.rs  mod.rs  vec_utils.rs
