[package]
name = "cosmic-ant-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
gl = "0.14.0"
nalgebra = "0.32"
glfw = "0.59.0"
nalgebra-glm = "0.19.0"
glfw-sys = "5.0.0"
gltf = "1.4.1"
winit = "0.30.11"
glutin = "0.32.3"
egui = "0.31.1"
egui-winit = "0.31.1"
glutin-winit = "0.5"
image = { version = "0.25", features = ["png", "jpeg"] }
